src/test/deca/syntax/parser/invalid/field_definition_visibility_unknown.deca
// Parser test, visibility wrong

class myClass {
    unprotected int x = 12;
}